{
  "version": 4,
  "terraform_version": "1.9.3",
  "serial": 11,
  "lineage": "88c9a500-a328-03d3-dc12-811257faba5a",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "custom-eip-for-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-011952109fa46a73d",
            "arn": "arn:aws:ec2:us-east-1:637423330145:elastic-ip/eipalloc-011952109fa46a73d",
            "domain": "vpc",
            "id": "eipalloc-011952109fa46a73d",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-54-152-107-96.compute-1.amazonaws.com",
            "public_ip": "54.152.107.96",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.custom-igw-for-vpc",
            "module.vpc.aws_vpc.tf-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "custom-igw-for-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423330145:internet-gateway/igw-075afa96f0a954c43",
            "id": "igw-075afa96f0a954c43",
            "owner_id": "637423330145",
            "tags": {
              "Name": "tf-custom-igw"
            },
            "tags_all": {
              "Name": "tf-custom-igw"
            },
            "vpc_id": "vpc-00751d52179102bb8"
          },
          "dependencies": [
            "module.vpc.aws_vpc.tf-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "custom-nat-for-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-011952109fa46a73d",
            "association_id": "eipassoc-0f6fb53a0f0796aac",
            "connectivity_type": "public",
            "id": "nat-098f304a05f7a3df4",
            "network_interface_id": "eni-002c0eac4bc83fb86",
            "private_ip": "192.168.1.206",
            "public_ip": "54.152.107.96",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-01a462795e5442255",
            "tags": {
              "Name": "tf-created-nat"
            },
            "tags_all": {
              "Name": "tf-created-nat"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.custom-eip-for-vpc",
            "module.vpc.aws_internet_gateway.custom-igw-for-vpc",
            "module.vpc.aws_subnet.pub-subnet",
            "module.vpc.aws_vpc.tf-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "custom-default-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423330145:route-table/rtb-070a1ff55f119427a",
            "id": "rtb-070a1ff55f119427a",
            "owner_id": "637423330145",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-075afa96f0a954c43",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "tf-default-rt"
            },
            "tags_all": {
              "Name": "tf-default-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-00751d52179102bb8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.custom-igw-for-vpc",
            "module.vpc.aws_vpc.tf-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "custom-pri-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423330145:route-table/rtb-0a675bfe41ab99687",
            "id": "rtb-0a675bfe41ab99687",
            "owner_id": "637423330145",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-098f304a05f7a3df4",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "tf-created-custom-rt"
            },
            "tags_all": {
              "Name": "tf-created-custom-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-00751d52179102bb8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.custom-eip-for-vpc",
            "module.vpc.aws_internet_gateway.custom-igw-for-vpc",
            "module.vpc.aws_nat_gateway.custom-nat-for-vpc",
            "module.vpc.aws_subnet.pub-subnet",
            "module.vpc.aws_vpc.tf-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "custom-nat-rt-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e0d0bd763b921672",
            "route_table_id": "rtb-0a675bfe41ab99687",
            "subnet_id": "subnet-0c76987042cd402f2"
          },
          "dependencies": [
            "module.vpc.aws_eip.custom-eip-for-vpc",
            "module.vpc.aws_internet_gateway.custom-igw-for-vpc",
            "module.vpc.aws_nat_gateway.custom-nat-for-vpc",
            "module.vpc.aws_route_table.custom-pri-rt",
            "module.vpc.aws_subnet.pri-subnet",
            "module.vpc.aws_subnet.pub-subnet",
            "module.vpc.aws_vpc.tf-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "custom-public-rt-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08424a313b195a4b3",
            "route_table_id": "rtb-070a1ff55f119427a",
            "subnet_id": "subnet-01a462795e5442255"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.custom-igw-for-vpc",
            "module.vpc.aws_route_table.custom-default-rt",
            "module.vpc.aws_subnet.pub-subnet",
            "module.vpc.aws_vpc.tf-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pri-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423330145:subnet/subnet-0c76987042cd402f2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "192.168.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c76987042cd402f2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "637423330145",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "custom-pri-sub"
            },
            "tags_all": {
              "Name": "custom-pri-sub"
            },
            "vpc_id": "vpc-00751d52179102bb8"
          },
          "dependencies": [
            "module.vpc.aws_vpc.tf-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423330145:subnet/subnet-01a462795e5442255",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "192.168.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01a462795e5442255",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "637423330145",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "custom-pub-sub"
            },
            "tags_all": {
              "Name": "custom-pub-sub"
            },
            "vpc_id": "vpc-00751d52179102bb8"
          },
          "dependencies": [
            "module.vpc.aws_vpc.tf-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "tf-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423330145:vpc/vpc-00751d52179102bb8",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/22",
            "default_network_acl_id": "acl-0a30afbb1c894620e",
            "default_route_table_id": "rtb-09c81330dcb3ac14c",
            "default_security_group_id": "sg-01fb47665429e21f8",
            "dhcp_options_id": "dopt-08f3fa9529b15565c",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-00751d52179102bb8",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-09c81330dcb3ac14c",
            "owner_id": "637423330145",
            "tags": {
              "Name": "tf-created-vpc"
            },
            "tags_all": {
              "Name": "tf-created-vpc"
            }
          }
        }
      ]
    }
  ]
}